Fixed Selection background + scrollbar

--- a/style/common.css
+++ b/style/common.css
@@ -34,6 +34,8 @@ p {
 	width: 100%;
 	height: 100%;
 	overflow-y: scroll;
+	backdrop-filter: blur(5px);
+	background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.4));
 }
 
 /* Toggle */
