--- a/style/property.css
+++ b/style/property.css
@@ -3,8 +3,6 @@
 /** CONTAINER **/
 
 .propertytree {
-	backdrop-filter: blur(5px);
-	background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.4));
 	color: white;
 	font-family: arial;
 	min-width: 300px;
